[package]
name = "message_broker"
version = "0.1.0"
edition = "2021"

[lib]
name = "message_broker"
path = "src/lib.rs"

[[example]]
name = "sandbox"
path = "examples/sandbox.rs"

[dependencies]
anyhow = "1.0.68"
anymap = "0.12.1"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["full"] }
